--- a/recipes/pom.xml
+++ b/recipes/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>kie-spring</artifactId>
 			<version>6.0.0.Final</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.eclipse.jdt.core.compiler</groupId>
+		    <artifactId>ecj</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
