--- a/recipes/src/main/resources/application.properties
+++ b/recipes/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/recipes?useSSL=false&createD
 spring.datasource.username = student
 spring.datasource.password = student
 
-spring.datasource.initialization-mode = always
+#spring.datasource.initialization-mode = always
 
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
