--- a/recipes/pom.xml
+++ b/recipes/pom.xml
@@ -92,6 +92,11 @@
 			<version>6.0.0.Final</version>
 		</dependency>
 		<dependency>
+    		<groupId>org.drools</groupId>
+	    	<artifactId>drools-compiler</artifactId>
+	    	<version>6.0.0.Final</version>
+	</dependency>
+		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-spring</artifactId>
 			<version>6.0.0.Final</version>
